@@ -18,6 +18,7 @@ On detail page current location parameters should be added to the term links - C
 OpenStreetMap does not working when third party plugin using the Google Maps JS API - FIXED
 GD listings query returns wrong total when category has sub categories - FIXED
 BREAKING CHANGE: Google Analytics settings simplified, MUST be re-setup to continue use - BREAKING CHANGE
+On multisite after import it shows wrong directory location to upload images - FIXED
 
 v1.6.10
 Search can fail if more than one CPT but one is empty - FIXED
